Fix letter spacing of header links

--- a/css/ui/_page-head.scss
+++ b/css/ui/_page-head.scss
@@ -18,6 +18,7 @@
         font-size: inherit;
         color: $base-text-color;
         text-decoration: none;
+        letter-spacing: -1px;
     }
 }
 
